fix: replace column-gap with margin

--- a/components/BaseTransferlist/styles.module.scss
+++ b/components/BaseTransferlist/styles.module.scss
@@ -23,7 +23,6 @@
 .token {
   display: flex;
   align-items: center;
-  column-gap: 4px;
   svg {
     margin-left: 0.25rem;
     cursor: pointer;
@@ -46,7 +45,9 @@
 .to {
   display: flex;
   align-items: center;
-  column-gap: 4px;
+  svg {
+    margin-left: 0.25rem;
+  }
 }
 
 .noRecords {
